k8s/docker-flow-swarm-listener/templates/ing.yaml
---
# Source: docker-flow-swarm-listener/templates/ing.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: swarm-listener-docker-flow-swarm-listener
  labels:
    app: docker-flow-swarm-listener
    chart: docker-flow-swarm-listener-0.0.1
    release: swarm-listener
    heritage: Tiller
  annotations:
    kubernetes.io/ingress.class: "nginx"
    certmanager.k8s.io/issuer: "letsencrypt-prod"
    certmanager.k8s.io/acme-challenge-type: http01
spec:
  rules:
  - host: swarmlistener.dockerflow.com
    http:
      paths:
        - path: /
          backend:
            serviceName: swarm-listener-docker-flow-swarm-listener
            servicePort: 80
  tls:
  - hosts:
    - swarmlistener.dockerflow.com
    secretName: le-swarm-listener-docker-flow-swarm-listener
